2002-07-12  James Henstridge  <james@daa.com.au>

	These changes help with win32 compat.

	* pygboxed.c (PyGBoxed_Type): set tp_alloc and tp_new to NULL.
	(PyGPointer_Type): same here.

	* gobjectmodule.c (PyGInterface_Type): set tp_alloc and tp_new to
	NULL.
	(initgobject): set tp_new and tp_alloc for various types.

	* pygobject.c (PyGObject_Type): set tp_alloc and tp_new to NULL.

2002-07-10  Murray Cumming  <murrayc@usa.net>

	* codegen/docextract_to_xml.py: Used jamesh's new extract_tmpl()
	function to get the sgml tmpl files. This file is only used by
	gtkmm at the moment, not pygtk itself.

2002-07-10  James Henstridge  <james@daa.com.au>

	* configure.in: increment version number to 1.99.11.

	* codegen/argtypes.py (GdkNativeWindow): add arg type.  This one
	also from Thomas Leonard.

	* gtk/gtk.defs (set_tip): allow tip_private to be NULL, and allow
	it to be omitted.  Fix suggested by Thomas Leonard
	<tal00r@ecs.soton.ac.uk>

	* gtk/gtkmodule.c (init_gtk): make sure LC_NUMERIC is set to C
	after gtk_init_check().

	* codegen/h2def.py (clean_func): apply patch by David Lehn
	<dlehn@vt.edu> to correctly handle multi-line preprocessor
	macros.  From bug #81771.
	(write_func): apply patch by Arjan Molenaar to write out
	is-constructor-of lines for function definitions that look like
	they might be constructors (doesn't catch every case, but is
	better than nothing).  From bug #80914.

2002-07-09  James Henstridge  <james@daa.com.au>

	* codegen/docextract.py (extract_tmpl): function to extract docs
	from gtk-doc 'tmpl' files.  Takes a list of tmpl/ directories as
	an argument.  Doesn't recurse.  Fixes bug 86860.

	Reworking of Arjan Molenaar's (arjanmolenaar@hetnet.nl) patch from
	bug 71435.

	* gtk/libglade.override (connect_one): watch the closure.
	(connect_many): watch the closure.

	* gtk/gtk.override (_wrap_gtk_toolbar_append_item): watch closure
	for signal.
	(_wrap_gtk_toolbar_prepend_item): same here.
	(_wrap_gtk_toolbar_insert_item): same here.