@@ -1,3 +1,12 @@
+2002-07-13  James Henstridge  <james@daa.com.au>
+
+	* gtk/gtk.override (_wrap_gtk_list_store_tp_getitem): allow
+	subscripting of a GtkListStore to get row wrappers.
+
+	* gtk/gtk-types.c: add PyGtkListStoreRow type, that represents a
+	row in a list store.
+	(_pygtk_register_boxed_types): set the ob_type member.
+
 2002-07-12  James Henstridge  <james@daa.com.au>
 
 	These changes help with win32 compat.
